include typed colors from OpenAPI
