# HudHud/Views/ABCRouteConfiguration/ABCRouteConfigurationView.swift
@@ -129,7 +129,7 @@ struct ABCRouteConfigurationView: View {
     let searchViewStore: SearchViewStore = .storeSetUpForPreviewing
     return ABCRouteConfigurationView(routeConfigurations: [
         .myLocation(Waypoint(coordinate: CLLocationCoordinate2D(latitude: 24.7192284, longitude: 46.6468331))),
-        .waypoint(ResolvedItem(id: UUID().uuidString, title: "Coffee Address, Riyadh", subtitle: "Coffee Shop", type: .toursprung, coordinate: CLLocationCoordinate2D(latitude: 24.7076060, longitude: 46.6273354), systemColor: .systemRed)),
-        .waypoint(ResolvedItem(id: UUID().uuidString, title: "The Garage, Riyadh", subtitle: "Work", type: .toursprung, coordinate: CLLocationCoordinate2D(latitude: 24.7192284, longitude: 46.6468331), systemColor: .systemRed))
+        .waypoint(ResolvedItem(id: UUID().uuidString, title: "Coffee Address, Riyadh", subtitle: "Coffee Shop", type: .toursprung, coordinate: CLLocationCoordinate2D(latitude: 24.7076060, longitude: 46.6273354), color: Color(.systemRed))),
+        .waypoint(ResolvedItem(id: UUID().uuidString, title: "The Garage, Riyadh", subtitle: "Work", type: .toursprung, coordinate: CLLocationCoordinate2D(latitude: 24.7192284, longitude: 46.6468331), color: Color(.systemRed)))
     ], mapStore: searchViewStore.mapStore, searchViewStore: searchViewStore)
 }
