# HudHud/Views/ContentView.swift
@@ -198,7 +198,7 @@ struct ContentView: View {
         .cameraModifierDisabled(self.mapStore.navigatingRoute != nil)
         .onLongPressMapGesture(onPressChanged: { mapGesture in
             if self.searchViewStore.mapStore.selectedItem == nil {
-                let selectedItem = ResolvedItem(id: UUID().uuidString, title: "Dropped Pin", subtitle: "", type: .toursprung, coordinate: mapGesture.coordinate, systemColor: SystemColor.systemRed)
+                let selectedItem = ResolvedItem(id: UUID().uuidString, title: "Dropped Pin", subtitle: "", type: .toursprung, coordinate: mapGesture.coordinate, color: Color(.systemRed))
                 self.searchViewStore.mapStore.selectedItem = selectedItem
             }
         })
@@ -437,7 +437,7 @@ struct SizePreferenceKey: PreferenceKey {
                            subtitle: "Al-Olya - Riyadh",
                            type: .toursprung,
                            coordinate: CLLocationCoordinate2D(latitude: 24.78796199972764, longitude: 46.69371856758005),
-                           systemColor: .systemRed,
+                           color: Color(.systemRed),
                            phone: "0503539560",
                            website: URL(string: "https://hudhud.sa"))
     store.mapStore.selectedItem = poi
@@ -475,7 +475,7 @@ extension NavigationViewController: WrappedViewController {
                            subtitle: "Al Takhassousi, Al Mohammadiyyah, Riyadh 12364",
                            type: .appleResolved,
                            coordinate: CLLocationCoordinate2D(latitude: 24.7332836, longitude: 46.6488895),
-                           systemColor: .systemRed,
+                           color: Color(.systemRed),
                            phone: "0503539560",
                            website: URL(string: "https://hudhud.sa"))
     let artwork = ResolvedItem(id: UUID().uuidString,
@@ -483,7 +483,7 @@ extension NavigationViewController: WrappedViewController {
                                subtitle: "artwork - Al-Olya - Riyadh",
                                type: .toursprung,
                                coordinate: CLLocationCoordinate2D(latitude: 24.77888564128478, longitude: 46.61555160031425),
-                               systemColor: .systemRed,
+                               color: Color(.systemRed),
                                phone: "0503539560",
                                website: URL(string: "https://hudhud.sa"))
 
@@ -492,7 +492,7 @@ extension NavigationViewController: WrappedViewController {
                                 subtitle: "Al-Olya - Riyadh",
                                 type: .toursprung,
                                 coordinate: CLLocationCoordinate2D(latitude: 24.78796199972764, longitude: 46.69371856758005),
-                                systemColor: .systemRed,
+                                color: Color(.systemRed),
                                 phone: "0503539560",
                                 website: URL(string: "https://hudhud.sa"))
     store.mapStore.displayableItems = [.resolvedItem(poi), .resolvedItem(artwork), .resolvedItem(pharmacy)]
