# HudHud/Views/PoiTile/PoiTileGridView.swift
@@ -44,7 +44,7 @@ struct PoiTileGridView: View {
                            subtitle: "Al-Narjs - Riyadh",
                            category: "Cafe", type: .hudhud,
                            coordinate: CLLocationCoordinate2D(latitude: 24.79671388339593, longitude: 46.70810150540095),
-                           systemColor: .systemRed,
+                           color: Color(.systemRed),
                            phone: "0503539560",
                            website: URL(string: "https://hudhud.sa"),
                            rating: 2,
@@ -55,7 +55,7 @@ struct PoiTileGridView: View {
                             subtitle: "Al-Narjs - Riyadh",
                             category: "Cafe", type: .hudhud,
                             coordinate: CLLocationCoordinate2D(latitude: 24.79671388339593, longitude: 46.70810150540095),
-                            systemColor: .systemRed,
+                            color: Color(.systemRed),
                             phone: "0503539560",
                             website: URL(string: "https://hudhud.sa"),
                             rating: 2,
